--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "learning node",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index"
+    "start": "node app",
+    "dev": "nodemon app"
   },
   "author": "Prasanna Kumar",
   "license": "ISC",
